src/FinancialForce Accounting/objects/codaIntegrationRule__c.object
<CustomObject>
    <customHelpPage>codahelpintegratioruledef</customHelpPage>
    <description>Defines an integration rule at header level.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MultiLineCashEntry__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Multi-Line Cash Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedIndicator__c</fullName>
        <label>Processed Indicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipSourceField__c</fullName>
        <label>Relationship Source Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipTargetField__c</fullName>
        <label>Relationship Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceDetailObject__c</fullName>
        <label>Source Detail Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDetailObject__c</fullName>
        <label>Target Detail Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Entry Line Item</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Note Line Item</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget and Balance</fullName>
                </value>
                <value>
                    <fullName>Cash Entry</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Note</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TargetObject__c</columns>
        <columns>SourceObject__c</columns>
        <columns>TargetDetailObject__c</columns>
        <columns>SourceDetailObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>